--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<!-- Loop over each object in the spots array -->
+{{!-- Loop over each object in the spots array --}}
 {{#each spots as |spot| }}
 <div class="row mb-4 spot">
   <div class="col-md-5">
@@ -8,10 +8,9 @@
       <a href="/spot/{{spot.id}}">{{spot.name}}</a>
     </h2>
     <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount spot.needed_funding}}</span>
-      needed!
+      <!-- Location emoji -->
+      <span for="img" aria-label="location">📍</span>
+      {{spot.location}}
     </p>
     <p>Created by {{project.user.name}} on {{format_date spot.date_created}}</p>
   </div>
