Fixed handlebars routing.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,8 +14,8 @@
         <input class="form-input" type="text" id="spot-name" name="spot-name" />
       </div>
       <div class="form-group">
-        <label for="spot-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="spot-funding" name="spot-funding" />
+        <label for="spot-location">location:</label>
+        <input class="form-input" type="number" id="spot-location" name="spot-location" />
       </div>
       <div class="form-group">
         <label for="spot-desc">description:</label>
