--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,15 +10,15 @@
 
     <form class="form new-spot-form">
       <div class="form-group">
-        <label for="spot-name">spot name:</label>
+        <label for="spot-name">Spot Name:</label>
         <input class="form-input" type="text" id="spot-name" name="spot-name" />
       </div>
       <div class="form-group">
-        <label for="spot-location">location:</label>
-        <input class="form-input" type="number" id="spot-location" name="spot-location" />
+        <label for="spot-location">Location:</label>
+        <input class="form-input" type="text" id="spot-location" name="spot-location" />
       </div>
       <div class="form-group">
-        <label for="spot-desc">description:</label>
+        <label for="spot-desc">Description:</label>
         <textarea class="form-input" id="spot-desc" name="spot-desc"></textarea>
       </div>
       <div class="form-group">
