--- a/views/spot.handlebars
+++ b/views/spot.handlebars
@@ -8,6 +8,6 @@
     {{location}}
   </p>
   <p>
-    <button class="btn btn-primary">Checkout this Spot!</button>
+    <button class="btn btn-primary" onclick="window.open('https://www.google.com/maps/search/?api=1&query={{location}}')">Checkout this Spot!</button>
   </p>
 </div>
