Finalized Chad branch. Working on added npm package.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,7 +12,7 @@
       <span for="img" aria-label="location">📍</span>
       {{spot.location}}
     </p>
-    <p>Created by {{project.user.name}} on {{format_date spot.date_created}}</p>
+    <p>Created by {{spot.user.name}} on {{format_date spot.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
