Added Cloudinary upload widget and working image url. Added image url to db.

--- a/views/spot.handlebars
+++ b/views/spot.handlebars
@@ -7,6 +7,7 @@
     <span for="img" aria-label="location">📍</span>
     {{location}}
   </p>
+  <img src={{image_url}}>
   <p>
     <button class="btn btn-primary" onclick="window.open('https://www.google.com/maps/search/?api=1&query={{location}}')">Checkout this Spot!</button>
   </p>
