--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,42 @@
-{{!-- Loop over each object in the spots array --}}
-{{#each spots as |spot| }}
-<div class="row mb-4 spot">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/spot/{{spot.id}}">{{spot.name}}</a>
-    </h2>
-    <p>
-      <!-- Location emoji -->
-      <span for="img" aria-label="location">📍</span>
-      {{spot.location}}
-    </p>
-    <p>Created by {{spot.user.name}} on {{format_date spot.date_created}}</p>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Login</h2>
+
+    <form class="form login-form">
+      <div class="form-group">
+        <label for="email-login">Email:</label>
+        <input class="form-input" type="text" id="email-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">Password:</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </div>
+    </form>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{spot.description}}
-    </p>
+  <div class="col-md-6">
+    <h2>Signup</h2>
+
+    <form class="form signup-form">
+      <div class="form-group">
+        <label for="name-signup">Name:</label>
+        <input class="form-input" type="text" id="name-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">Email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">Password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Signup</button>
+      </div>
+    </form>
   </div>
 </div>
-{{/each}}
+
+<script src="./js/login.js"></script>
