--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,30 +8,31 @@
   <div class="col-md-6">
     <h3>Create a New Spot:</h3>
 
-    <button 
-      id="upload_widget" 
-      class="cloudinary-button">
-        Click here to save a photo
+    <button id="upload_widget" class="cloudinary-button">
+      Click here to save a photo
     </button>
-    
+
     <!-- placeholder for uploaded image -->
-    <img  
-      id="uploadedimage" 
-      src="">
-    </img> 
+    <img id="uploadedimage" src=""></img>
+
     <form class="form new-spot-form">
       <div class="form-group">
         <label for="spot-name">Spot Name:</label>
         <input class="form-input" type="text" id="spot-name" name="spot-name" />
       </div>
+
       <div class="form-group">
         <label for="spot-location">Location:</label>
-        <input class="form-input" type="text" id="spot-location" name="spot-location" />
+        <div class="autocomplete-container" id="autocomplete-container">
+          <input class="form-input" type="text" id="spot-location" name="spot-location" placeholder="Enter the address below" />
+        </div>
       </div>
+
       <div class="form-group">
         <label for="spot-desc">Description:</label>
         <textarea class="form-input" id="spot-desc" name="spot-desc"></textarea>
       </div>
+
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
       </div>
@@ -48,7 +49,7 @@
         <h4><a href="/spot/{{spot.id}}">{{spot.name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{spot.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger delete-spot-btn" data-id="{{spot.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
@@ -56,10 +57,6 @@
   {{/if}}
 </div>
 
-    <!-- cloudinary upload widget -->
-    <script 
-     src="https://widget.cloudinary.com/v2.0/global/all.js" 
-     type="text/javascript">
-    </script>
-
+<!-- cloudinary upload widget -->
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
 <script src="./js/profile.js"></script>
