--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -24,9 +24,11 @@
       <div class="form-group">
         <label for="spot-location">Location:</label>
         <div class="autocomplete-container" id="autocomplete-container">
-          <input class="form-input" type="text" id="spot-location" name="spot-location" placeholder="Enter the address below" />
+          <input class="form-input" type="text" id="spot-location" name="spot-location"
+            placeholder="Enter the address below" readonly />
         </div>
       </div>
+
 
       <div class="form-group">
         <label for="spot-desc">Description:</label>
