--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,7 +9,7 @@
     <h3>Create a New Spot:</h3>
 
     <button id="upload_widget" class="cloudinary-button">
-      Click here to save a photo
+      Click Here to Save a Photo
     </button>
 
     <!-- placeholder for uploaded image -->
