--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -19,13 +19,18 @@ html {
  */
 body {
   margin: 0;
+  
 }
 
 /**
  * Render the `main` element consistently in IE.
  */
 main {
+  background-color: aliceblue;
   display: block;
+  opacity: .7;
+  border-radius: .2%;
+  margin: 0%
 }
 
 /**
@@ -184,7 +189,8 @@ select {
 }
 
 /**
- * Correct the inability to style clickable types in iOS and Safari.
+ * Correct the i
+ bility to style clickable types in iOS and Safari.
  */
 button,
 [type='button'],
@@ -1009,12 +1015,12 @@ a:hover {
 }
 
 .btn.btn-primary {
-  background-color: #2d3e50;
-  color: #d9e9e8;
+  background-color: #FACE69;
+  color: black;
 }
 
 .btn.btn-primary:hover {
-  background-color: #57779a;
+  background-color: #FACE69
 }
 
 .btn.btn-danger {
@@ -1072,12 +1078,12 @@ a:hover {
 }
 
 .btn.btn-link {
-  background-color: #1b89bc;
+  background-color: #FACE69;
   color: #ffffff;
 }
 
 .btn.btn-link:hover {
-  background-color: #31a9e1;
+  background-color: #FACE69;
 }
 
 .card {
@@ -1110,12 +1116,14 @@ a:hover {
 
 form {
   width: 100%;
+  margin: 2%;
 }
 
 form .form-group {
   display: block;
   width: 100%;
-  margin: 0.625rem 0;
+  margin: 2% 0;
+
 }
 
 form .form-input,
@@ -1143,7 +1151,7 @@ form .form-input {
   width: 100%;
   padding: 0.75rem;
   color: #1a1a1a;
-  background-color: #ffffff;
+  background-color: white;
   margin: 0.625rem 0;
   font-size: 1.2rem;
   border: 1px solid #484848;
@@ -1252,8 +1260,9 @@ form [type='radio'] {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
 }
 
 [class*='col-'] {
