--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Favorite Spots</title>
   <!--<link rel="icon" type="image/x-icon" href="/images/favicon.ico">-->
-  <!-- <link rel="icon" type="image/x-icon" href="../public/images/icons8-point.png">-->
+  <link rel="icon" type="image/x-icon" href="https://icons8.com/icon/UTjxwpLTDSre/ico">
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -26,7 +26,7 @@
         <a href="/profile"></a> 
         <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login" button class="btn btn-outline-success" style="float: right" type="submit">Login</button></a>
+        <a href="/login" button class="btn btn-outline-success login" style="float: right" type="submit">Login</button></a>
         {{/if}}
       </nav>
   </header>
