--- a/views/spot.handlebars
+++ b/views/spot.handlebars
@@ -1,10 +1,11 @@
+<script src="https://kit.fontawesome.com/384ea4421e.js" crossorigin="anonymous"></script>
 <div class="text-center">
   <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
+  {{!-- <p>{{{get_emoji}}}</p> --}}
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
-    <span for="img" aria-label="location">📍</span>
+    <span for="img" aria-label="location"><i class="fa-solid fa-location-dot"></i></span>
     {{location}}
   </p>
   <img src={{image_url}}>
