--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,7 +13,7 @@
     </button>
 
     <!-- placeholder for uploaded image -->
-    <img id="uploadedimage" src=""></img>
+    <img id="uploadedimage" class="image-size" src=""></img>
 
     <form class="form new-spot-form">
       <div class="form-group">
