--- a/views/spot.handlebars
+++ b/views/spot.handlebars
@@ -1,14 +1,13 @@
 <script src="https://kit.fontawesome.com/384ea4421e.js" crossorigin="anonymous"></script>
 <div class="text-center">
   <h2>{{name}}</h2>
-  {{!-- <p>{{{get_emoji}}}</p> --}}
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
     <span for="img" aria-label="location"><i class="fa-solid fa-location-dot"></i></span>
     {{location}}
   </p>
-  <img src={{image_url}}>
+  <img class="image-size" src={{image_url}}>
   <p>
     <button class="btn btn-primary" onclick="window.open('https://www.google.com/maps/search/?api=1&query={{location}}')">Checkout this Spot!</button>
   </p>
