Added redirect link back to Profile from Spot.

--- a/views/spot.handlebars
+++ b/views/spot.handlebars
@@ -11,4 +11,5 @@
   <p>
     <button class="btn btn-primary" onclick="window.open('https://www.google.com/maps/search/?api=1&query={{location}}')">Checkout this Spot!</button>
   </p>
+  <a href="/profile">Back to My Spots</a> 
 </div>
